--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,121 @@
 .App {
   text-align: center;
+  width: 100%;
+  height: 100%;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 0;
+  margin: 0;
+  background-color: #212121;
+  font-family: Arial, Helvetica, sans-serif;
+  color: aliceblue;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav {
+  height: 60px;
+  width: 100%;
+  margin: 0;
+  display: grid;
+  place-items: center;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav h1 {
+  margin: 0;
+  font-size: 45px;
+  color: #ffffff;
+}
+
+.game {
+  height: 100%;
   display: flex;
-  flex-direction: column;
   align-items: center;
+  /* padding-top: 50px; */
+  flex-direction: column;
+}
+
+.board {
+  width: 360px;
+  height: 420px;
+  border: 1px solid white;
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: column;
+  flex-grow: 1;
+}
+
+.row {
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+  margin: 5px;
+}
+
+.letter {
+  width: 100%;
+  border: 2px solid grey;
+  margin: 5px;
+  display: inline-flex;
+  justify-content: center;
+  align-items: center;
+
+  font-size: 2rem;
+  line-height: 1;
+  font-weight: bold;
+  vertical-align: middle;
+  box-sizing: border-box;
   color: white;
+  text-transform: uppercase;
 }
 
-.App-link {
-  color: #61dafb;
+#correct {
+  background-color: #538d4e;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+#exist {
+  background-color: #b59f3b;
+}
+
+#error {
+  background-color: #3a3a3c;
+}
+
+.keyboard {
+  width: 430px;
+  height: 200px;
+}
+
+.line {
+  flex: 33%;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin: 5px;
+}
+
+.key {
+  width: 30px;
+  height: 50px;
+  margin: 5px;
+  border-radius: 4px;
+  display: grid;
+  place-items: center;
+  font-size: 16px;
+  background-color: #818384;
+  color: white;
+  cursor: pointer;
+}
+
+#functionKey {
+  width: 70px;
+}
+
+#correct {
+  background-color: #538d4e;
+}
+#present {
+  background-color: #b59f3b;
+}
+#absent {
+  background-color: #aa3a3c;
 }
