--- a/src/App.css
+++ b/src/App.css
@@ -136,6 +136,12 @@ h3 {
 #absent {
   background-color: #aa3a3c;
 }
+.instruction {
+  max-width: 500px;
+  position: absolute;
+  left: 25%;
+  right: 25%;
+}
 
 .example {
   height: 30px;
@@ -144,7 +150,6 @@ h3 {
   display: inline-flex;
   justify-content: center;
   align-items: center;
-  font-size: 1.5rem;
   line-height: 1;
   font-weight: bold;
   vertical-align: middle;
@@ -152,9 +157,17 @@ h3 {
   text-transform: uppercase;
 }
 
-.instruction {
-  max-width: 500px;
-  position: absolute;
-  left: 25%;
-  right: 25%;
+.container {
+  display: grid;
+  grid-template-columns: 1fr 4fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  gap: 5px 5px;
+  grid-template-areas:
+    "correct descriptionA"
+    "present descriptionB"
+    "absent descriptionC";
+  justify-content: center;
+  align-content: center;
+  justify-items: left;
+  align-items: center;
 }
